# teamMEGA

./: CMakeLists.txt  FindOMPL.cmake  README.md  package.xml
src/: QuadrotorPlanning.cpp  main.cpp
